--- a/templates/game/emprestimo.html
+++ b/templates/game/emprestimo.html
@@ -45,13 +45,15 @@
                     <i class="fas fa-user fa-fw"></i>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
-                    <a class="dropdown-item" href="account/login.html"><i class="fas fa-wrench"></i> Editar Perfil</a>
+                    <a class="dropdown-item" href="../account/login.html"><i class="fas fa-user"></i> Login</a>
 
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="../user/user-detail-1.html"><i class="fas fa-wrench"></i>  Perfil</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#"><i class="fas fa-user-slash"></i> Cancelar Conta</a>
 
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt"></i> Sair</a>
+                    <a class="dropdown-item" href="../account/login.html"><i class="fas fa-sign-out-alt"></i> Sair</a>
                 </div>
             </li>
         </ul>
@@ -123,8 +125,8 @@
                         </div>
 
                         <div class="col-md-10">
-                            <h1 class="mt-4">Transferir</h1>
-                            <h3>Saldo: R$ 100,00</h3>
+                            <h1 class="mt-4">Empréstimo online e grátis</h1>
+                            <h3>Saldo: R$ 0,00</h3>
                         </div>
 
                     </div>
@@ -134,8 +136,8 @@
                         <div class="col-md-8">
                             <form class="row g-2">
                                 <div class="col-5">
-                                  <label for="inputEmail4" class="form-label">Transferir para outra conta bancária</label>
-                                  <input type="email" class="form-control" id="inputEmail4" placeholder="ex: 12345">
+                                  <label for="inputEmail4" class="form-label">De quanto você precisa ?</label>
+                                  <input type="number" min="0.01" step="0.01" class="form-control" id="inputEmail4" placeholder="ex: R$50.000,00">
                                 </div>
                                 <div class="col-5">
                                   <label for="inputAddress" class="form-label">Valor em Real</label>
