--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,7 @@
                     <a class="dropdown-item" href="account/login.html"><i class="fas fa-user"></i> Login</a>
 
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="account/login.html"><i class="fas fa-wrench"></i>  Perfil</a>
+                    <a class="dropdown-item" href="user/user-detail-1.html"><i class="fas fa-wrench"></i>  Perfil</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#"><i class="fas fa-user-slash"></i> Cancelar Conta</a>
 
@@ -149,7 +149,7 @@
                                     <a href="game/guardar-dinheiro.html" class="btn btn-primary quadrado"><i class="fas fa-credit-card"></i> Guardar Dinheiro</a>
                                 </div>
                                 <div class="col-md-6">
-                                    <a href="game/game-beneficio.html" class="btn btn-primary quadrado"><i class="fas fa-credit-card"></i> Empréstimo</a>
+                                    <a href="game/emprestimo.html" class="btn btn-primary quadrado"><i class="fas fa-credit-card"></i> Empréstimo</a>
                                 </div>
                                 <div class="col-md-6">   
                                     <a href="game/game-list.html" class="btn btn-primary quadrado"><i class="fas fa-credit-card"></i> Cartão de Crédito</a>
