--- a/templates/user/user-detail-2.html
+++ b/templates/user/user-detail-2.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Dashboard</title>
+    <title>GamersBank - Home</title>
 
     <script src="../resources/js/jquery/jquery-3.4.1.min.js"></script>
 
@@ -18,7 +18,7 @@
 
 <body class="sb-nav-fixed">
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
-        <a class="navbar-brand" href="../index.html">App</a>
+        <a class="navbar-brand" href="../index.html">GamersBank</a>
         <button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#">
             <i class="fas fa-bars"></i>
         </button>
@@ -44,10 +44,15 @@
                     <i class="fas fa-user fa-fw"></i>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
-                    <a class="dropdown-item" href="#">Perfil</a>
+                    <a class="dropdown-item" href="account/login.html"><i class="fas fa-user"></i> Login</a>
 
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="login.html">Sair</a>
+                    <a class="dropdown-item" href="user/user-detail-1.html"><i class="fas fa-wrench"></i>  Perfil</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#"><i class="fas fa-user-slash"></i> Cancelar Conta</a>
+
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="../account/login.html"><i class="fas fa-sign-out-alt"></i> Sair</a>
                 </div>
             </li>
         </ul>
@@ -63,7 +68,7 @@
                             <div class="sb-nav-link-icon">
                                 <i class="fas fa-tachometer-alt"></i>
                             </div>
-                            Home
+                            Página Inicial
                         </a>
                         <div class="sb-sidenav-menu-heading">Opções</div>
 
@@ -72,7 +77,7 @@
                             <div class="sb-nav-link-icon">
                                 <i class="fas fa-book-open"></i>
                             </div>
-                            Jogos
+                            Conta
                             <div class="sb-sidenav-collapse-arrow">
                                 <i class="fas fa-angle-down"></i>
                             </div>
@@ -80,14 +85,32 @@
                         <div class="collapse" id="collapseUsers" aria-labelledby="headingOne"
                             data-parent="#sidenavAccordion">
                             <nav class="sb-sidenav-menu-nested nav">
-                                <a class="nav-link" href="game/game-list.html">Listar</a>
+                                <a class="nav-link" href="game/game-list.html">Cartão de Crédito</a>
                             </nav>
                         </div>
+                        <div class="collapse" id="collapseUsers" aria-labelledby="headingOne"
+                            data-parent="#sidenavAccordion">
+                            <nav class="sb-sidenav-menu-nested nav">
+                                <a class="nav-link" href="game/game-beneficio.html">Benefícios</a>
+                            </nav>
+                        </div>
+                        <div class="collapse" id="collapseUsers" aria-labelledby="headingOne"
+                            data-parent="#sidenavAccordion">
+                            <nav class="sb-sidenav-menu-nested nav">
+                                <a class="nav-link" href="game/game-pix.html">Pix</a>
+                            </nav>
+                        </div>
+                        <div class="collapse" id="collapseUsers" aria-labelledby="headingOne"
+                        data-parent="#sidenavAccordion">
+                        <nav class="sb-sidenav-menu-nested nav">
+                            <a class="nav-link" href="game/game-suporte.html">Suporte</a>
+                        </nav>
+                    </div>
                     </div>
                 </div>
                 <div class="sb-sidenav-footer">
                     <div class="small">Logado como:</div>
-                    Tiburssinho
+                    Administrador
                 </div>
             </nav>
         </div>
@@ -97,7 +120,7 @@
                 <div class="container-fluid">
                     <h1 class="mt-4">Perfil</h1>
                     <ol class="breadcrumb mb-4">
-                        <li class="breadcrumb-item">Home</li>
+                        <li class="breadcrumb-item">Páginal Inicial</li>
                         <li class="breadcrumb-item active">Perfil</li>
                     </ol>
 
@@ -108,13 +131,13 @@
                             <div class="card">
                                 <div class="card-body">
                                     <div class="mb-3 text-center">
-                                        <img src="../resources/assets/img/avatar.jpg" width="200"
+                                        <img src="../resources/assets/img/Minha Logo original.png" width="200"
                                             class="rounded-circle img-fluid" />
                                     </div>
                                     <div class="mb-2">
-                                        <p class="text-primary text-center">Tiburssinho</p>
+                                        <p class="text-primary text-center">yFreezy212</p>
                                         <p class="text-muted text-center">
-                                            Desenvolvedor
+                                            Usuario
                                         </p>
                                     </div>
                                 </div>
@@ -127,17 +150,17 @@
                                 <div class="card-body">
                                     <div class="row">
                                         <div class="col-sm-3">Nome</div>
-                                        <div class="col-sm-9">Tiburssinho Tiburssius</div>
+                                        <div class="col-sm-9">yFreezy212 Gelinho</div>
                                     </div>
                                     <hr>
                                     <div class="row">
                                         <div class="col-sm-3">Email</div>
-                                        <div class="col-sm-9">tiburssinho@gmail.com</div>
+                                        <div class="col-sm-9">gelinho212@gmail.com</div>
                                     </div>
                                     <hr>
                                     <div class="row">
                                         <div class="col-sm-3">Idade</div>
-                                        <div class="col-sm-9">45 anos</div>
+                                        <div class="col-sm-9">20 anos</div>
                                     </div>
                                 </div>
                             </div>
@@ -163,7 +186,7 @@
             <footer class="py-4 bg-light mt-auto">
                 <div class="container-fluid">
                     <div class="d-flex align-items-center justify-content-between small">
-                        <div class="text-muted">Copyright &copy; FAI - 2020</div>
+                        <div class="text-muted">Copyright &copy; GamersBank - 2021</div>
                         <div>
                             <a href="#">Política de privacidade</a>
                             &middot;
