--- a/templates/game/emprestimo.html
+++ b/templates/game/emprestimo.html
@@ -136,15 +136,56 @@
                         <div class="col-md-8">
                             <form class="row g-2">
                                 <div class="col-5">
-                                  <label for="inputEmail4" class="form-label">De quanto você precisa ?</label>
-                                  <input type="number" min="0.01" step="0.01" class="form-control" id="inputEmail4" placeholder="ex: R$50.000,00">
+                                  <label for="inputEmail4" class="form-label">De quanto você precisa R$ ? </label>
+                                  <input type="number" min="30000" step="0.01" max="5000000" class="form-control" id="inputEmail4" placeholder="ex: R$50.000,00">
                                 </div>
                                 <div class="col-5">
-                                  <label for="inputAddress" class="form-label">Valor em Real</label>
-                                  <input type="text" class="form-control" id="inputAddress" placeholder="ex: 250">
+                                    <div class="form-group">
+                                        <label class="small mb-1" for="exampleFormControlSelect1">Escolha o número de parcelas que deseja pagar</label> <select class="form-control small mb-1"
+                                            id="exampleFormControlSelect1">
+                                            <option>Escolha...</option>
+                                            <option>1</option>
+                                            <option>2</option>
+                                            <option>3</option>
+                                            <option>4</option>
+                                            <option>5</option>
+                                            <option>6</option>
+                                            <option>7</option>
+                                            <option>8</option>
+                                            <option>9</option>
+                                            <option>10</option>
+                                            <option>11</option>
+                                            <option>12</option>
+                                            <option>13</option>
+                                            <option>14</option>
+                                            <option>15</option>
+                                            <option>16</option>
+                                            <option>17</option>
+                                            <option>18</option>
+                                            <option>19</option>
+                                            <option>20</option>
+                                            <option>21</option>
+                                            <option>22</option>
+                                            <option>23</option>
+                                            <option>24</option>
+                                            <option>25</option>
+                                            <option>26</option>
+                                            <option>27</option>
+                                            <option>28</option>
+                                            <option>29</option>
+                                            <option>30</option>
+                                            <option>31</option>
+                                            <option>32</option>
+                                            <option>33</option>
+                                            <option>34</option>
+                                            <option>35</option>
+                                            <option>36</option>
+                                        </select>
+                                    </div>
+                                  
                                 </div>
                                 <div class="col-5">
-                                  <label for="inputAddress2" class="form-label">Descrição</label>
+                                  <label for="inputAddress2" class="form-label">Escolha a data da primeira parcela</label>
                                   <input type="text" class="form-control" id="inputAddress2" placeholder="pagamento pizza aquele dia">
                                 </div>
                                 <div class="col-12">
