--- a/templates/game/emprestimo.html
+++ b/templates/game/emprestimo.html
@@ -190,8 +190,9 @@
                                   
                                 </div>
                                 <div class="col-12">
-                                  <button type="submit" class="btn btn-primary">Cancelar</button>
-                                  <button type="submit" class="btn btn-primary text-right">Transferir</button>
+                                  <button type="submit" class="btn btn-primary">Solicitar </button>
+                                  <a type="submit" class="btn btn-primary" href="../account/login.html" ><i ></i> Solicitar</a>
+                                  <button type="submit" class="btn btn-primary text-right">Cancelar</button>
                                 </div>
                               </form>
                         </div>
