--- a/templates/game/transferencia.html
+++ b/templates/game/transferencia.html
@@ -146,8 +146,8 @@
                                   <input type="text" class="form-control" id="inputAddress2" placeholder="pagamento pizza aquele dia">
                                 </div>
                                 <div class="col-12">
-                                  <button type="submit" class="btn btn-primary">Cancelar</button>
-                                  <button type="submit" class="btn btn-primary text-right">Transferir</button>
+                                  <button type="submit" class="btn btn-primary">Transferir</button>
+                                  <button type="submit" class="btn btn-primary text-right">Cancelar</button>
                                 </div>
                               </form>
                         </div>
