--- a/templates/game/emprestimo.html
+++ b/templates/game/emprestimo.html
@@ -198,12 +198,11 @@
                                     <input type="number" min="0" step="0.01" max="#" class="form-control" id="inputEmail4" placeholder="ex: R$50.000,00">
                                   </div>
                                 
-                                <div class="col-12">
-                      
+                                
+                                <div class="col-12"> 
+                                    <br>        
                                   <a type="submit" class="btn btn-primary" href="../account/login.html" ><i ></i> Solicitar</a>
-                                  <a type="submit" class="btn btn-primary" href="../index.html" ><i ></i> Cancelar</a>
-
-                                  
+                                  <a type="submit" class="btn btn-primary" href="../game/emprestimo.html" ><i ></i> Cancelar</a>
                                 </div>
                               </form>
                         </div>
