--- a/templates/game/game-detail-funko.html
+++ b/templates/game/game-detail-funko.html
@@ -137,12 +137,9 @@
 
                                 <div class="float-right">
                                     <button class="btn btn-primary">
-                                        <i class="fa fa-thumbs-up primary"></i>
+                                        Solicitar
                                     </button>
 
-                                    <button class="btn btn-primary ml-2">
-                                        <i class="fa fa-check primary"></i>
-                                    </button>
                                 </div>
                             </div>
                         </div>
