--- a/templates/game/game-detail.html
+++ b/templates/game/game-detail.html
@@ -121,7 +121,7 @@
 
                         <div class="col-lg-7 col-md-8 col-12 h-100">
 
-                            <img src="../resources/assets/img/cartao/img.jpg" class="img-fluid col-12" />
+                            <img src="../resources/assets/img/cartao/img.png" class="img-fluid col-12" />
                             <div class="">
 
                             </div>
@@ -137,12 +137,9 @@
 
                                 <div class="float-right">
                                     <button class="btn btn-primary">
-                                        <i class="fa fa-thumbs-up primary"></i>
+                                        Solicitar
                                     </button>
 
-                                    <button class="btn btn-primary ml-2">
-                                        <i class="fa fa-check primary"></i>
-                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -160,8 +157,7 @@
                                     <ol class="carousel-indicators">
                                         <li data-target="#carousel-parent" class="active"></li>
                                         <li data-target="#carousel-parent"></li>
-                                        <li data-target="#carousel-parent"></li>
-                                        <li data-target="#carousel-parent"></li>
+                                        
                                     </ol>
 
                                     <!-- conteudo -->
@@ -172,17 +168,10 @@
                                                 class="img-fluid d-block w-100">
                                         </div>
                                         <div class="carousel-item">
-                                            <img src="../resources/assets/img/cartao/img-1.jpg"
+                                            <img src="../resources/assets/img/cartao/img.png"
                                                 class="img-fluid d-block w-100">
                                         </div>
-                                        <div class="carousel-item">
-                                            <img src="../resources/assets/img/cartao/img-2.jpg"
-                                                class="img-fluid d-block w-100">
-                                        </div>
-                                        <div class="carousel-item">
-                                            <img src="../resources/assets/img/cartao/img-3.jpg"
-                                                class="img-fluid d-block w-100">
-                                        </div>
+                                      
                                     </div>
 
                                     <!-- setas -->
