--- a/templates/game/game-list.html
+++ b/templates/game/game-list.html
@@ -127,7 +127,7 @@
                                 <div class="card-title text-center mt-1">Pedir Cartão de Crédito</div>
                                 <div class="card-body text-center no-padding">
                                     <a href="../game/game-detail.html">
-                                        <img src="../resources/assets/img/cartao/img.jpg"
+                                        <img src="../resources/assets/img/cartao/img.png"
                                             class="img-fluid" />
                                     </a>
                                 </div>
