--- a/templates/game/transferencia.html
+++ b/templates/game/transferencia.html
@@ -133,19 +133,20 @@
                         <div class="col-md-2"></div>
                         <div class="col-md-8">
                             <form class="row g-2">
-                                <div class="col-5">
+                                <div class="col-8">
                                   <label for="inputEmail4" class="form-label">Transferir para outra conta bancária</label>
                                   <input type="email" class="form-control" id="inputEmail4" placeholder="ex: 12345">
                                 </div>
-                                <div class="col-5">
+                                <div class="col-8">
                                   <label for="inputAddress" class="form-label">Valor em Real</label>
-                                  <input type="text" class="form-control" id="inputAddress" placeholder="ex: 250">
+                                  <input type="number" min="0" class="form-control" id="inputAddress" placeholder="ex: 250">
                                 </div>
-                                <div class="col-5">
+                                <div class="col-8">
                                   <label for="inputAddress2" class="form-label">Descrição</label>
                                   <input type="text" class="form-control" id="inputAddress2" placeholder="pagamento pizza aquele dia">
                                 </div>
                                 <div class="col-12">
+                                    <br>
                                   <button type="submit" class="btn btn-primary">Transferir</button>
                                   <button type="submit" class="btn btn-primary text-right">Cancelar</button>
                                 </div>
