--- a/templates/index.html
+++ b/templates/index.html
@@ -76,7 +76,7 @@
                         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUsers"
                             aria-expanded="false">
                             <div class="sb-nav-link-icon">
-                                <i class="fas fa-book-open"></i>
+                                <i class="fas fa-money-check-alt"></i>
                             </div>
                             Conta
                             <div class="sb-sidenav-collapse-arrow">
@@ -172,15 +172,15 @@
                                     </ol>
                                     <div class="carousel-inner">
                                         <div class="carousel-item active">
-                                            <img class="d-block carrousel-imagem" src="resources/assets/img/carrosel/car-1.jpg"
+                                            <img class="img-fluid d-block w-100" src="resources/assets/img/carrosel/logotipo.png"
                                                 alt="First slide">
                                         </div>
                                         <div class="carousel-item">
-                                            <img class="d-block carrousel-imagem" src="resources/assets/img/carrosel/car-2.jpg"
+                                            <img class="img-fluid d-block w-100" src="resources/assets/img/carrosel/car-1.png"
                                                 alt="Second slide">
                                         </div>
                                         <div class="carousel-item">
-                                            <img class="d-block carrousel-imagem" src="resources/assets/img/carrosel/car-3.jpg"
+                                            <img class="img-fluid d-block w-100" src="resources/assets/img/carrosel/car-2.png"
                                                 alt="Third slide">
                                         </div>
                                     </div>
@@ -212,7 +212,7 @@
 
                 </div>
             </main>
-            <footer class="py-4 bg-light mt-auto">
+            <footer class="py-4 bg-warning mt-auto">
                 <div class="container-fluid">
                     <div class="d-flex align-items-center justify-content-between small">
                         <div class="text-muted">Copyright &copy; GamersBank - 2021</div>
