--- a/templates/game/game-beneficio.html
+++ b/templates/game/game-beneficio.html
@@ -86,7 +86,7 @@
                         <div class="collapse" id="collapseUsers" aria-labelledby="headingOne"
                             data-parent="#sidenavAccordion">
                             <nav class="sb-sidenav-menu-nested nav">
-                                <a class="nav-link" href="../game/game-beneficio.html">Benefícios</a>
+                                <a class="nav-link" href="../game/game-beneficio.html">Rewards Gamer</a>
                             </nav>
                         </div>
                         <div class="collapse" id="collapseUsers" aria-labelledby="headingOne"
@@ -114,10 +114,10 @@
         <div id="layoutSidenav_content">
             <main>
                 <div class="container-fluid">
-                    <h1 class="mt-4">Benefícios</h1>
+                    <h1 class="mt-4">Rewards Gamer</h1>
                     <ol class="breadcrumb mb-4">
                         <li class="breadcrumb-item">Home</li>
-                        <li class="breadcrumb-item active">Recompensas</li>
+                        <li class="breadcrumb-item active">Rewards Gamer</li>
                     </ol>
 
 
