--- a/templates/game/game-suporte.html
+++ b/templates/game/game-suporte.html
@@ -141,7 +141,7 @@
                             <div class="h-100 card bg-dark text-light">
                                 <div class="card-title text-center mt-1">Chat Online</div>
                                 <div class="card-body text-center no-padding">
-                                    <a href="../game/game-detail.html">
+                                    <a href="../general/not-found.html">
                                         <img src="../resources/assets/img/chatonline.jpg"
                                             class="img-fluid" />
                                     </a>
