--- a/templates/general/not-found.html
+++ b/templates/general/not-found.html
@@ -35,7 +35,7 @@
             <footer class="py-4 bg-light mt-auto">
                 <div class="container-fluid">
                     <div class="d-flex align-items-center justify-content-between small">
-                        <div class="text-muted">Copyright &copy; FAI - 2020</div>
+                        <div class="text-muted">Copyright &copy; GamersBank - 2021</div>
                         <div>
                             <a href="#">Política de privacidade</a>
                             &middot;
