--- a/templates/game/emprestimo.html
+++ b/templates/game/emprestimo.html
@@ -22,7 +22,7 @@
 
 <body class="sb-nav-fixed">
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
-        <a class="navbar-brand titulo" href="index.html">GamersBank</a>
+        <a class="navbar-brand titulo" href="../index.html">GamersBank</a>
         <button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#">
             <i class="fas fa-bars"></i>
         </button>
@@ -128,7 +128,7 @@
                         </div>
 
                         <div class="col-md-10">
-                            <h1 class="mt-4">Empréstimo online e grátis</h1>
+                            <h1 class="mt-4">Empréstimo online</h1>
                             <h3>Saldo: R$ 0,00</h3>
                         </div>
 
@@ -201,7 +201,7 @@
                                 
                                 <div class="col-12"> 
                                     <br>        
-                                  <a type="submit" class="btn btn-primary" href="../account/login.html" ><i ></i> Solicitar</a>
+                                  <a type="submit" class="btn btn-primary" href="../general/not-found.html" ><i ></i> Solicitar</a>
                                   <a type="submit" class="btn btn-primary" href="../game/emprestimo.html" ><i ></i> Cancelar</a>
                                 </div>
                               </form>
