--- a/templates/game/extrato.html
+++ b/templates/game/extrato.html
@@ -19,7 +19,7 @@
 
 <body class="sb-nav-fixed">
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
-        <a class="navbar-brand titulo" href="index.html">GamersBank</a>
+        <a class="navbar-brand titulo" href="../index.html">GamersBank</a>
         <button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#">
             <i class="fas fa-bars"></i>
         </button>
@@ -45,16 +45,18 @@
                     <i class="fas fa-user fa-fw"></i>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
-                    <a class="dropdown-item" href="account/login.html"><i class="fas fa-wrench"></i> Editar Perfil</a>
+                    <a class="dropdown-item" href="../account/login.html"><i class="fas fa-user"></i> Login</a>
 
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#"><i class="fas fa-user-slash"></i> Cancelar Conta</a>
+                    <a class="dropdown-item" href="../user/user-detail-1.html"><i class="fas fa-wrench"></i>  Perfil</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="../general/not-found.html"><i class="fas fa-user-slash"></i> Cancelar Conta</a>
 
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt"></i> Sair</a>
                 </div>
             </li>
-        </ul>
+        </ul>   
 
     </nav>
     <div id="layoutSidenav">
