--- a/templates/game/transferencia.html
+++ b/templates/game/transferencia.html
@@ -19,7 +19,7 @@
 
 <body class="sb-nav-fixed">
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
-        <a class="navbar-brand titulo" href="index.html">GamersBank</a>
+        <a class="navbar-brand titulo" href="../index.html">GamersBank</a>
         <button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#">
             <i class="fas fa-bars"></i>
         </button>
@@ -135,15 +135,15 @@
                             <form class="row g-2">
                                 <div class="col-8">
                                   <label for="inputEmail4" class="form-label">Transferir para outra conta bancária</label>
-                                  <input type="email" class="form-control" id="inputEmail4" placeholder="ex: 12345">
+                                  <input type="email" class="form-control" id="inputEmail4" placeholder="Ex: 10209384309">
                                 </div>
                                 <div class="col-8">
-                                  <label for="inputAddress" class="form-label">Valor em Real</label>
-                                  <input type="number" min="0" class="form-control" id="inputAddress" placeholder="ex: 250">
+                                  <label for="inputAddress" class="form-label">Digite o Valor em R$</label>
+                                  <input type="number" min="0" class="form-control" id="inputAddress" placeholder="">
                                 </div>
                                 <div class="col-8">
-                                  <label for="inputAddress2" class="form-label">Descrição</label>
-                                  <input type="text" class="form-control" id="inputAddress2" placeholder="pagamento pizza aquele dia">
+                                  <label for="inputAddress2" class="form-label">Descrição :</label>
+                                  <input type="text" class="form-control" id="inputAddress2" placeholder="Insira uma descrição">
                                 </div>
                                 <div class="col-12">
                                     <br>
@@ -156,7 +156,7 @@
                     </div>
                 </div>
             </main>
-            <footer class="py-4 bg-light mt-auto">
+            <footer class="py-4  bg-light mt-auto" >
                 <div class="container-fluid">
                     <div class="d-flex align-items-center justify-content-between small">
                         <div class="text-muted">Copyright &copy; GamersBank - 2021</div>
