--- a/templates/index.html
+++ b/templates/index.html
@@ -50,10 +50,10 @@
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="user/user-detail-1.html"><i class="fas fa-wrench"></i>  Perfil</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#"><i class="fas fa-user-slash"></i> Cancelar Conta</a>
+                    <a class="dropdown-item" href="general/not-found.html"><i class="fas fa-user-slash"></i> Cancelar Conta</a>
 
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt"></i> Sair</a>
+                    <a class="dropdown-item" href="account/login.html"><i class="fas fa-sign-out-alt"></i> Sair</a>
                 </div>
             </li>
         </ul>
