--- a/templates/account/register.html
+++ b/templates/account/register.html
@@ -10,7 +10,7 @@
     <script src="../resources/js/jquery/jquery-3.4.1.min.js"></script>
 
     <link href="../resources/css/styles.css" rel="stylesheet" />
-    <link rel="stylesheet" href="../resources/css/estilo.css">
+    <!--<link rel="stylesheet" href="../resources/css/estilo.css">-->
     <script src="../resources/js/font-awesome/all.min.js"></script>
 </head>
 
@@ -30,7 +30,7 @@
                                         <div class="form-row">
                                             <div class="col-md-6">
                                                 <div class="form-group"><label class="small mb-1"
-                                                        for="inputFirstName">Nome</label><input
+                                                        for="inputFirstName">Nome</label><input required="required"
                                                         class="form-control py-4" id="inputFirstName" type="text"
                                                         placeholder="Insira seu nome" /></div>
                                             </div>
@@ -49,6 +49,11 @@
                                                 for="inputCPFAddress">CPF</label><input class="form-control py-4"
                                                 id="inputCPFAddress" type="" aria-describedby="emailHelp"
                                                 placeholder="Insira o CPF" /></div>
+
+                                        <div class="form-group"><label class="small mb-1"
+                                                for="inputCPFAddress">Data de Nascimento</label><input class="form-control py-4"
+                                                id="inputCPFAddress" type="date" aria-describedby="emailHelp"
+                                                placeholder="Insira a Data de Nascimento" /></div>
                                         <div class="form-row">
                                             <div class="col-md-6">
                                                 <div class="form-group"><label class="small mb-1"
