--- a/gb-web/src/main/resources/templates/layout.html
+++ b/gb-web/src/main/resources/templates/layout.html
@@ -15,7 +15,7 @@
 <script src="/resources/js/jquery/jquery-3.4.1.min.js"></script>
     <link rel="shortcut icon" href="/resources/assets/img/icone.png">
     <link href="/resources/css/estilo.css" rel="stylesheet" />
-    <link href="/resources/css/estilo2.css" rel="stylesheet" />
+    <!--  <link href="/resources/css/estilo2.css" rel="stylesheet" /> -->
     <link href="/resources/css/styles.css" rel="stylesheet" />
     <link href="/resources/css/datatables/dataTables.bootstrap4.min.css" rel="stylesheet" />
     <link href="/resources/css/estilo.css" rel="stylesheet">
