--- a/gb-web/src/main/resources/templates/conta/detail.html
+++ b/gb-web/src/main/resources/templates/conta/detail.html
@@ -2,13 +2,12 @@
 <html layout:decorate="~{layout}">
 
 <head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<meta name="viewport"
-	content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-<meta name="description" content="" />
-<meta name="author" content="" />
-<title>GamersBank - Home</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+	<meta name="description" content="" />
+	<meta name="author" content="" />
+	<title>GamersBank - Home</title>
 
 </head>
 
@@ -19,12 +18,12 @@
 		<div class="container-fluid">
 			<div class="row mb-4">
 				<div class="col-md-2">
-					<img style="width: 200px;" src="/resources/assets/img/sasuke.jpg"
-						class="img-thumbnail">
+					<img style="width: 200px;" src="/resources/assets/img/sasuke.jpg" class="img-thumbnail">
 				</div>
 
 				<div class="col-md-10">
 					<h1 th:text="'Bem vindo, ' + ${conta.nome}" class="mt-4">Bem vindo, Gamer</h1>
+					<h3 th:text="'Número da conta: ' + ${conta.numero}"></h3>
 					<h3 th:text="'Saldo: R$ ' + ${conta.saldoAtual}">Saldo: R$ 100,00</h3>
 				</div>
 
@@ -36,32 +35,22 @@
 				<div class="col-md-6">
 					<div class="row">
 						<div class="col-md-6">
-							<a href="game/transferencia.html"
-								class="btn btn-primary quadrado"><i
-								class="fas fa-credit-card"></i> Transferencia</a>
+							<a th:href="@{/conta/transfere/{id} (id=${conta.id})}" class="btn btn-primary quadrado"><i
+									class="fas fa-credit-card"></i> Transferencia</a>
 						</div>
 						<div class="col-md-6">
-							<a href="game/extrato.html" class="btn btn-primary quadrado"><i
-								class="fas fa-credit-card"></i> Extrato</a>
+							<a th:href="@{/extrato/detail/{id} (id=${conta.id})}" class="btn btn-primary quadrado"><i
+									class="fas fa-credit-card"></i> Extrato</a>
 						</div>
 						<div class="col-md-6">
-							<a href="game/guardar-dinheiro.html"
-								class="btn btn-primary quadrado"><i
-								class="fas fa-credit-card"></i> Guardar Dinheiro</a>
+							<a th:href="@{/conta/guardar-dinheiro/{id} (id=${conta.id})}"
+								class="btn btn-primary quadrado"><i class="fas fa-credit-card"></i> Guardar Dinheiro</a>
 						</div>
 						<div class="col-md-6">
-							<a href="game/emprestimo.html" class="btn btn-primary quadrado"><i
-								class="fas fa-credit-card"></i> Empréstimo</a>
+							<a th:href="@{/emprestimo/{id} (id=${conta.id})}" class="btn btn-primary quadrado"><i
+									class="fas fa-credit-card"></i> Empréstimo</a>
 						</div>
-						<div class="col-md-6">
-							<a href="game/game-list.html" class="btn btn-primary quadrado"><i
-								class="fas fa-credit-card"></i> Cartão de Crédito</a>
-						</div>
-						<div class="col-md-6">
-							<a href="game/game-beneficio.html"
-								class="btn btn-primary quadrado"><i
-								class="fas fa-credit-card"></i> Rewards Gamer</a>
-						</div>
+
 
 					</div>
 
@@ -69,39 +58,32 @@
 
 				<div class="col-md-6">
 					<span class="carrosel-gamer">
-						<div id="carouselExampleIndicators" class="carousel slide"
-							data-ride="carousel">
+						<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 							<ol class="carousel-indicators">
-								<li data-target="#carouselExampleIndicators" data-slide-to="0"
-									class="active"></li>
+								<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
 								<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
 								<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
 							</ol>
 							<div class="carousel-inner">
 								<div class="carousel-item active">
 									<img class="img-fluid d-block w-100"
-										src="/resources/assets/img/carrosel/logotipo.png"
-										alt="First slide">
+										src="/resources/assets/img/carrosel/logotipo.png" alt="First slide">
 								</div>
 								<div class="carousel-item">
-									<img class="img-fluid d-block w-100"
-										src="/resources/assets/img/carrosel/car-1.png"
+									<img class="img-fluid d-block w-100" src="/resources/assets/img/carrosel/car-1.png"
 										alt="Second slide">
 								</div>
 								<div class="carousel-item">
-									<img class="img-fluid d-block w-100"
-										src="/resources/assets/img/carrosel/car-2.png"
+									<img class="img-fluid d-block w-100" src="/resources/assets/img/carrosel/car-2.png"
 										alt="Third slide">
 								</div>
 							</div>
-							<a class="carousel-control-prev"
-								href="#carouselExampleIndicators" role="button"
-								data-slide="prev"> <span class="carousel-control-prev-icon"
-								aria-hidden="true"></span> <span class="sr-only">Previous</span>
-							</a> <a class="carousel-control-next"
-								href="#carouselExampleIndicators" role="button"
-								data-slide="next"> <span class="carousel-control-next-icon"
-								aria-hidden="true"></span> <span class="sr-only">Next</span>
+							<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button"
+								data-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+								<span class="sr-only">Previous</span>
+							</a> <a class="carousel-control-next" href="#carouselExampleIndicators" role="button"
+								data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"></span>
+								<span class="sr-only">Next</span>
 							</a>
 						</div>
 					</span>
