--- a/gb-web/src/main/resources/templates/layout.html
+++ b/gb-web/src/main/resources/templates/layout.html
@@ -1,40 +1,37 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="http://www.thymeleaf.org"
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+
 <head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<meta name="viewport"
-	content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-<meta name="description" content="" />
-<meta name="author" content="" />
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+	<meta name="description" content="" />
+	<meta name="author" content="" />
 
-<title>GB</title>
+	<title>GB</title>
 
-<script src="/resources/js/jquery/jquery-3.4.1.min.js"></script>
-    <link rel="shortcut icon" href="/resources/assets/img/icone.png">
-    <link href="/resources/css/estilo.css" rel="stylesheet" />
-    <!--  <link href="/resources/css/estilo2.css" rel="stylesheet" /> -->
-    <link href="/resources/css/styles.css" rel="stylesheet" />
-    <link href="/resources/css/datatables/dataTables.bootstrap4.min.css" rel="stylesheet" />
-    <link href="/resources/css/estilo.css" rel="stylesheet">
-    <script src="/resources/js/font-awesome/all.min.js"></script>
+	<script src="/resources/js/jquery/jquery-3.4.1.min.js"></script>
+	<link rel="shortcut icon" href="/resources/assets/img/icone.png">
+	<link href="/resources/css/estilo.css" rel="stylesheet" />
+	<!--  <link href="/resources/css/estilo2.css" rel="stylesheet" /> -->
+	<link href="/resources/css/styles.css" rel="stylesheet" />
+	<link href="/resources/css/datatables/dataTables.bootstrap4.min.css" rel="stylesheet" />
+	<link href="/resources/css/estilo.css" rel="stylesheet">
+	<script src="/resources/js/font-awesome/all.min.js"></script>
 </head>
+
 <body class="sb-nav-fixed">
 	<nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
 		<a class="navbar-brand titulo" href="index.html">GamersBank</a>
-		<button class="btn btn-link btn-sm order-1 order-lg-0"
-			id="sidebarToggle" href="#">
+		<button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#">
 			<i class="fas fa-bars"></i>
 		</button>
 
 		<!-- Navbar Search-->
-		<form
-			class="d-none d-md-inline-block form-inline ml-auto mr-0 mr-md-3 my-2 my-md-0">
+		<form class="d-none d-md-inline-block form-inline ml-auto mr-0 mr-md-3 my-2 my-md-0">
 			<div class="input-group">
-				<input class="form-control" type="text"
-					placeholder="Procurar por..." aria-label="Search"
+				<input class="form-control" type="text" placeholder="Procurar por..." aria-label="Search"
 					aria-describedby="basic-addon2" />
 				<div class="input-group-append">
 					<button class="btn btn-primary" type="button">
@@ -46,85 +43,53 @@
 
 		<!-- Navbar-->
 		<ul class="navbar-nav ml-auto ml-md-0">
-			<li class="nav-item dropdown"><a
-				class="nav-link dropdown-toggle" id="userDropdown" href="#"
-				role="button" data-toggle="dropdown" aria-haspopup="true"
-				aria-expanded="false"> <i class="fas fa-user fa-fw"></i>
-			</a>
-				<div class="dropdown-menu dropdown-menu-right"
-					aria-labelledby="userDropdown">
-					<a class="dropdown-item" href="account/login.html"><i
-						class="fas fa-user"></i> Login</a>
+			<li class="nav-item dropdown"><a class="nav-link dropdown-toggle" id="userDropdown" href="#" role="button"
+					data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="fas fa-user fa-fw"></i>
+				</a>
+				<div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
 
-					<div class="dropdown-divider"></div>
-					<a class="dropdown-item" href="user/user-detail-1.html"><i
-						class="fas fa-wrench"></i> Perfil</a>
-					<div class="dropdown-divider"></div>
-					<a class="dropdown-item" href="general/not-found.html"><i
-						class="fas fa-user-slash"></i> Cancelar Conta</a>
+					<div th:if="${usuarioLogado == null}">
+						<a class="dropdown-item" th:href="@{/conta/login}">
+							<i class="fas fa-user"></i> Login</a>
+					</div>
+					<div th:if="${usuarioLogado != null}">
 
-					<div class="dropdown-divider"></div>
-					<a class="dropdown-item" href="account/login.html"><i
-						class="fas fa-sign-out-alt"></i> Sair</a>
-				</div></li>
+						<div class="dropdown-divider"></div>
+
+						<a th:href="@{/conta/edit/{id} (id=${conta.id})}" class="dropdown-item"><i
+								class="fas fa-wrench"></i> Editar Perfil</a>
+
+						<div class="dropdown-divider"></div>
+						<a th:href="@{/conta/delete/{id} (id=${conta.id})}" class="dropdown-item"><i
+								class="fas fa-user-slash"></i> Excluir Conta</a>
+
+						<div class="dropdown-divider"></div>
+						<a class="dropdown-item" th:href="@{/conta/logout}"><i class="fas fa-sign-out-alt"></i> Sair</a>
+					</div>
+
+				</div>
+			</li>
 		</ul>
 
 	</nav>
 	<div id="layoutSidenav">
 		<div id="layoutSidenav_nav">
-			<nav class="sb-sidenav accordion sb-sidenav-dark"
-				id="sidenavAccordion">
+			<nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
 				<div class="sb-sidenav-menu">
 					<div class="nav">
 						<div class="sb-sidenav-menu-heading">Menu</div>
-						<a class="nav-link" href="index.html">
+						<a class="nav-link" th:href="@{/}">
 							<div class="sb-nav-link-icon">
 								<i class="fas fa-tachometer-alt"></i>
 							</div> Página Inicial
 						</a>
-						<div class="sb-sidenav-menu-heading">Opções</div>
 
-						<a class="nav-link collapsed" href="#" data-toggle="collapse"
-							data-target="#collapseUsers" aria-expanded="false">
-							<div class="sb-nav-link-icon">
-								<i class="fas fa-money-check-alt"></i>
-							</div> Conta
-							<div class="sb-sidenav-collapse-arrow">
-								<i class="fas fa-angle-down"></i>
-							</div>
-						</a>
-						<div class="collapse" id="collapseUsers"
-							aria-labelledby="headingOne" data-parent="#sidenavAccordion">
-							<nav class="sb-sidenav-menu-nested nav">
-								<a class="nav-link" href="game/game-list.html">Cartão de
-									Crédito</a>
-							</nav>
-						</div>
-						<div class="collapse" id="collapseUsers"
-							aria-labelledby="headingOne" data-parent="#sidenavAccordion">
-							<nav class="sb-sidenav-menu-nested nav">
-								<a class="nav-link" href="game/game-beneficio.html">Rewards
-									Gamer</a>
-							</nav>
-						</div>
-						<div class="collapse" id="collapseUsers"
-							aria-labelledby="headingOne" data-parent="#sidenavAccordion">
-							<nav class="sb-sidenav-menu-nested nav">
-								<a class="nav-link" href="game/game-pix.html">Pix</a>
-							</nav>
-						</div>
-						<div class="collapse" id="collapseUsers"
-							aria-labelledby="headingOne" data-parent="#sidenavAccordion">
-							<nav class="sb-sidenav-menu-nested nav">
-								<a class="nav-link" href="game/game-suporte.html">Suporte</a>
-							</nav>
-						</div>
 					</div>
 				</div>
-				<div class="sb-sidenav-footer">
+				<!--  <div class="sb-sidenav-footer">
 					<div class="small">Logado como:</div>
 					Administrador
-				</div>
+				</div> -->
 			</nav>
 		</div>
 
@@ -135,8 +100,7 @@
 
 			<footer class="py-4 bg-warning mt-auto">
 				<div class="container-fluid">
-					<div
-						class="d-flex align-items-center justify-content-between small">
+					<div class="d-flex align-items-center justify-content-between small">
 						<div class="text-muted">Copyright &copy; GamersBank - 2021</div>
 						<div>
 							<a href="#">Política de privacidade</a> &middot; <a href="#">Termos
@@ -156,4 +120,5 @@
 	<script src="/resources/js/datatable/dataTables.bootstrap4.min.js"></script>
 	<script src="/resources/assets/demo/datatables-init.js"></script>
 </body>
+
 </html>
